Revision history for perl distribution Mad-Mapper

0.06 Not Released
 - Allow specifying "has_many" SST

0.05 2015-09-01T10:22:07+0200
 - Add support for Mojo::SQLite #1

0.04 2015-09-01T07:17:52+0200
 - Fix "Calling a synchronous function on an asynchronous handle"
   Cannot change $db into async mode if already in sync mode

0.03 2015-07-12T11:36:05+0200
 - Fix "The getpwuid function is unimplemented"

0.02 2015-04-22T08:27:17+0200
 - More robust live database tests

0.01 2015-04-20T20:44:10+0200
 - Add col(), pk() and table() sugar
 - Add delete(), load() and save()
 - Add "has many" relationship
 - Started project
